--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>MedTracker</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,10 +46,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-      <li class="inactive"><a href="/medications">Medications</a></li>
+		  {% block navbar %}
+      			<li class="inactive"><a href="/medications">Medications</a></li>
 			<li class="inactive"><a href="/history">History</a></li>
 			<li class="inactive"><a href="/import">Import</a></li>
-      <li class="inactive"><a href="/import">Export</a></li>
+      			<li class="inactive"><a href="/import">Export</a></li>
+	    	  {% endblock %}
 	    <li class="dropdown">
 	    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% if current_user %}{{ current_user.email }}<span class="caret"></span></a>
 	    <ul class="dropdown-menu">
