Added simple export page with button for downloading script from downloads directory. Altered exporting script to automatically output to downloads folder and activated export on heading

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <li class="inactive"><a href="/medications">Medications</a></li>
                          <li class="inactive"><a href="/history">History</a></li>
                          <li class="inactive"><a href="/import">Import</a></li>
-                         <li class="inactive"><a href="/import">Export</a></li>
+                         <li class="inactive"><a href="/export">Export</a></li>
 {%endblock%}
 {% block title %}Welcome to Formulary Updater{% endblock %}
 {% block body %}
