--- a/templates/medications.html
+++ b/templates/medications.html
@@ -3,7 +3,7 @@
 <li class="active"><a href="/medications">Medications</a></li>
                         <li class="inactive"><a href="/history">History</a></li>
                         <li class="inactive"><a href="/import">Import</a></li>
-                         <li class="inactive"><a href="/import">Export</a></li>
+                         <li class="inactive"><a href="/export">Export</a></li>
 {%endblock%}
 {% block title %}Medications | ehhapp-formulary2{% endblock %}
 {% block body %}
