--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
       			<li class="inactive"><a href="/medications">Medications</a></li>
 			<li class="inactive"><a href="/history">History</a></li>
 			<li class="inactive"><a href="/import">Import</a></li>
-      			<li class="inactive"><a href="/import">Export</a></li>
+      			<li class="inactive"><a href="/export">Export</a></li>
 	    	  {% endblock %}
 	    <li class="dropdown">
 	    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% if current_user %}{{ current_user.email }}<span class="caret"></span></a>
