tweaked counts, bought and sold now

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome to MedTracker</h1>
         <p>Tracking medication prices and updating the formulary.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="#" role="button">Upload a new invoice &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="/import" role="button">Upload a new invoice &raquo;</a>
         </p>
       </div>
 <div class="container">
