--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,6 @@
     <link rel="icon" href="/favicon.ico">
 
     <title>{% block title %}{% endblock %}</title>
-
     <!-- Bootstrap core CSS -->
     <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -19,6 +18,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/assets/bootstrap/css/starter-template.css" rel="stylesheet">
+    <link href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="/assets/bootstrap/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -29,10 +29,23 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/bootstrap/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/assets/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
+    <script type="text/javascript">$(document).ready(function(){
+                 $('#activesort').DataTable({
+      "order": [[ 0, "asc" ]],
+      "lengthMenu": [[15, 100, 200, -1], [15, 100, 200, "All"]]
+      });});
+    </script>
   </head>
 
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -86,10 +99,5 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/bootstrap/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/assets/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
