--- a/templates/medications_view.html
+++ b/templates/medications_view.html
@@ -13,7 +13,7 @@
 	    <div class="page-header">
 		    <h1>Medications</h1>
 	    </div>
-	    <table class="table table-hover" id="activesort">
+	    <table class="table table-hover">
 		<thead>
 			<th> Name </th>
 			<th> Current Price </th>
