Updated view functions and filtering.

--- a/templates/import.html
+++ b/templates/import.html
@@ -17,7 +17,7 @@
 	      	<span class="input-grp-btn">
 				<span class="btn btn-primary btn-file">
 				Browse...
-				<input class="form-control" id="invoice_file" name="invoice_file" type="file">
+				<input class="form-control" id="invoice_file" name="invoice_file" type="file" multiple>
 				</span>
 			</span>
 		</div>
