--- a/templates/export.html
+++ b/templates/export.html
@@ -24,6 +24,7 @@
 		<div class="container">
 			<div class='col-md-5'>
 				<div class="form-group">
+					<label for="datetimepicker6">From:</label>
 					<div class='input-group date' id='datetimepicker6'>
 						<input type='text' class="form-control" name = "startDate"/>
 						<span class="input-group-addon">
@@ -34,6 +35,7 @@
 			</div>
 			<div class='col-md-5'>
 				<div class="form-group">
+					<label for="datetimepicker7">To:</label>
 					<div class='input-group date' id='datetimepicker7'>
 						<input type='text' class="form-control" name = "endDate"/>
 						<span class="input-group-addon">
