--- a/templates/layout.html
+++ b/templates/layout.html
@@ -99,5 +99,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript" src="/assets/filestyle/src/bootstrap-filestyle.min.js"> </script>
   </body>
 </html>
