--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 
   <!-- Google Sign in for authentication -->
   <meta name="google-signin-scope" content="profile email ">
-  <meta name="google-signin-client_id" content="{{ vm_client_id }}">
+  <meta name="google-signin-client_id" content="{{ google_client_id }}">
 </head>
 <body>
   <div class="container" style="width:100%; height:100%;font-family:sans-serif">
