--- a/templates/export.html
+++ b/templates/export.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block navbar%}
     <li class="inactive"><a href="/medications">Medications</a></li>
+    <li class="inactive"><a href="/spending">Spending</a></li>
     <li class="inactive"><a href="/history">History</a></li>
     <li class="inactive"><a href="/import">Import</a></li>
     <li class="active"><a href="/export">Export</a></li>
