--- a/templates/medications.html
+++ b/templates/medications.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block navbar%}
 <li class="active"><a href="/medications">Medications</a></li>
+<li class="inactive"><a href="/spending">Spending</a></li>
                         <li class="inactive"><a href="/history">History</a></li>
                         <li class="inactive"><a href="/import">Import</a></li>
                          <li class="inactive"><a href="/export">Export</a></li>
@@ -30,6 +31,8 @@
 			 {% endif %}
 			</select>
 	    </form>
+	    <div class="row">
+	    <div class="col-md-12">
 	    <table class="table table-hover" id="activesort">
 		<thead>
 			<th> Name </th>
@@ -39,8 +42,8 @@
 			<th> % chg</th>
 			<th> Spend total </th>
 			<th> Bought </th>
-			<th> Sold </th>
-			<th> Scripts </th>
+			<!--<th> Sold </th>
+			<th> Scripts </th>!-->
 		</thead>
 		<tbody>
 		{% for med in medications %}
@@ -52,8 +55,8 @@
 			<td> {{med.pct_change}}%</td>
 			<td> ${{med.spend}}</td>
 			<td> {{med.bought}}</td>
-			<td> {{med.sold}}</td>
-			<td> {{med.scripts}} </td>
+			<!--<td> {{med.sold}}</td>
+			<td> {{med.scripts}} </td>!-->
 		</tr>
 		{% endfor %}
 		</tbody>
@@ -61,6 +64,7 @@
 	    {% if medications|length == 0 %}
 	    <div class="alert alert-error">No medication records in DB.</div>
 	    {% endif %}
+	    </div>
 	    </div>
 
 {% endblock %}
