--- a/templates/medications_view_history.html
+++ b/templates/medications_view_history.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block navbar%}
 <li class="inactive"><a href="/medications">Medications</a></li>
+<li class="inactive"><a href="/spending">Spending</a></li>
                         <li class="active"><a href="/history">History</a></li>
                         <li class="inactive"><a href="/import">Import</a></li>
                          <li class="inactive"><a href="/export">Export</a></li>
@@ -37,7 +38,16 @@
 			</div></div>
 	    </form>
 	    {% else %}
-	    {{html_figure|safe}}
+	    <h3>Price Changes</h3>
+	    {{html_figure1|safe}}
+	    <h3>Money Spent</h3>
+	    <div class="row">
+	    <div class="col-md-2"></div>
+    	<div class="col-md-8">
+    	{{html_figure2|safe}}
+    	</div>
+    	<div class="col-md-2"></div>
+	    </div>
 	    <table class="table table-hover">
 		<thead>
 			<th> Name </th>
@@ -74,7 +84,7 @@
 		{% endfor %}			
 		</tbody>
 	    </table>
-	    </div>
 	    {% endif %}
+	    </div>
 
 {% endblock %}
