--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,6 +35,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/bootstrap/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/momentjs/moment.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
     <script src="//cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
