--- a/templates/view_invoice.html
+++ b/templates/view_invoice.html
@@ -11,7 +11,7 @@
 
 {% block body %}
 	    <div class="page-header">
-		    <h3>Invoice {{invoice.properties_dict()["uploaded_name"]}} (SHA1:{{invoice.checksum[0:10]}})</h3>
+		    <h3>Invoice {{invoice.properties_dict()["uploaded_name"]}} (SHA1:{{invoice.checksum[0:10]|string}})</h3>
 	    </div>
 	    <div class="row">
 	    <div class="col-md-12">
