--- a/templates/medications_view_history.html
+++ b/templates/medications_view_history.html
@@ -28,8 +28,9 @@
 					  <option value="2014">2014</option>
 					  <option value="2015">2015</option>
 					  <option value="2016">2016</option>
-					  <option value="2017" selected="selected">2017</option>
+					  <option value="2017">2017</option>
 					  <option value="2018">2018</option>
+					  <option value="0" selected="selected">All</option>
 					</select>
 				</div>
 			</div>
