added med images

--- a/templates/medications_view.html
+++ b/templates/medications_view.html
@@ -33,6 +33,7 @@
 			<tr><td>Dose</td><td>{{medications[0].dosage}}</td></tr>
 			<tr><td>Form</td><td>{{medications[0].admin}}</td></tr>
 			<tr><td>More information</td><td><a href="https://mor.nlm.nih.gov/RxNav/search?searchBy=RXCUI&searchTerm={{medications[0].cui}}#class">Open</a></td></tr>
+			<tr><td>What does it look like?</td><td><a href="https://dailymed.nlm.nih.gov/dailymed/search.cfm?searchdb=rxcui&query={{medications[0].cui}}&pagesize=20&page=1">Open</a></td></tr>
 			<tr><td>Category</td><td>{{medications[0].category}}</td></tr>
 			<tr><td>Can prescribe?</td><td>{{medications[0].prescribable}}</td></tr>
 		   </tbody>
