--- a/templates/medications_view.html
+++ b/templates/medications_view.html
@@ -14,7 +14,7 @@
 {% block body %}
 	    <div class="page-header">
 		    <h1>History for year {{year}}</h1>
-		    <h3>{{medications[0].name}}</h3>
+		    <h3>{{medications[0].name}} <a href="/medications/{{medications[0].id}}/edit" class="btn btn-xs btn-primary" role="button">Edit</a></h3>
 	    </div>
 	    <h4>Information</h4>
 	    <table class="table table-hover">
