--- a/templates/medications.html
+++ b/templates/medications.html
@@ -1,11 +1,27 @@
 {% extends 'layout.html' %}
 {% block navbar%}
-<li class="active"><a href="/medications">Medications</a></li>
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    		aria-haspopup="true" aria-expanded="false">
+    	Medications <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+	    <li><a href="/medications">Prices</a></li>
+	    <li><a href="/medications/guide">Prescribing guide</a></li>
+	    <li><a href="/categories">Categories</a></li>
+    </ul>
+</li>
 <li class="inactive"><a href="/history">Comparisons</a></li>
 <li class="inactive"><a href="/spending">Spending</a></li>
-<li class="inactive"><a href="/invoices">History</a></li>
-<li class="inactive"><a href="/import">Import</a></li>
-<li class="inactive"><a href="/export">Export</a></li>
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    		aria-haspopup="true" aria-expanded="false">
+    	Invoices <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+	    <li><a href="/invoices">History</a></li>
+	    <li><a href="/import">Import</a></li>
+	    <li><a href="/export">Export</a></li>
+    </ul>
+</li>
 {%endblock%}
 {% block title %}Medications | ehhapp-formulary2{% endblock %}
 {% macro increment(dct, key, inc=1)%}
@@ -52,7 +68,7 @@
 		<tr>
 			<td> <a href="/medications/{{med.id}}?year={{year}}">{{med.name}}</a></td>
                         <td> <a href="/history/?search_term={{med.common_name}}&year={{year}}">{{med.common_name}}</a></td>
-			<td> {{med.category}} </td>
+			<td> <a href="/categories/{{med.category.id}}">{{med.category}}</a></td>
 			<td> ${{med.start_price}}</td>
 			<td> ${{med.end_price}}</td>
 			<td> {{med.pct_change}}%</td>
