--- a/templates/medications_edit.html
+++ b/templates/medications_edit.html
@@ -1,11 +1,27 @@
 {% extends 'layout.html' %}
 {% block navbar%}
-<li class="active"><a href="/medications">Medications</a></li>
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    		aria-haspopup="true" aria-expanded="false">
+    	Medications <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+	    <li><a href="/medications">Prices</a></li>
+	    <li><a href="/medications/guide">Prescribing guide</a></li>
+	    <li><a href="/categories">Categories</a></li>
+    </ul>
+</li>
 <li class="inactive"><a href="/history">Comparisons</a></li>
 <li class="inactive"><a href="/spending">Spending</a></li>
-<li class="inactive"><a href="/invoices">History</a></li>
-<li class="inactive"><a href="/import">Import</a></li>
-<li class="inactive"><a href="/export">Export</a></li>
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    		aria-haspopup="true" aria-expanded="false">
+    	Invoices <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+	    <li><a href="/invoices">History</a></li>
+	    <li><a href="/import">Import</a></li>
+	    <li><a href="/export">Export</a></li>
+    </ul>
+</li>
 {%endblock%}
 {% block title %}Edit | Medications | ehhapp-formulary2{% endblock %}
 {% macro increment(dct, key, inc=1)%}
@@ -27,10 +43,10 @@
 			   <tbody>
 			   	<tr><td>Can prescribe?</td><td>{{form.prescribable}}
 			   		{% for error in form.name.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %} </td></tr>
-			   	<tr><td>Formal Name</td><td>{{form.name}}
+			   	<tr><td>Formal Name</td><td>{{form.name(size=40)}}
 			   		{% for error in form.name.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %} 
 			   	</td></tr>
-				<tr><td>Common Name</td><td>{{form.common_name}}
+				<tr><td>Common Name</td><td>{{form.common_name(size=40)}}
 			   		{% for error in form.common_name.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %} </td></tr>
 				<tr><td>Dose</td><td>{{form.dosage}}
 			   		{% for error in form.dosage.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %} </td></tr>
@@ -39,11 +55,11 @@
 				<tr><td>RxCUI Identifier #</td><td>{{form.cui}}
 			   		{% for error in form.cui.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %} 
 				</td></tr>
-				<tr><td>Category</td><td>{{form.category_name}}
+				<tr><td>Category</td><td>{{form.category_name(size=40)}}
 			   		{% for error in form.category_name.errors %}<span style="color: red;">[{{ error }}]</span>{% endfor %} </td></tr>
 			   </tbody>
 		    </table>
-	    <p><input type="submit" value="Save changes"></p>
+	    <p><input type="submit" value="Submit changes" class="btn btn-success"></p>
 	    </form>
 
 {% endblock %}
