--- a/templates/medications_guide.html
+++ b/templates/medications_guide.html
@@ -1,11 +1,27 @@
 {% extends 'layout.html' %}
 {% block navbar%}
-<li class="active"><a href="/medications">Medications</a></li>
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    		aria-haspopup="true" aria-expanded="false">
+    	Medications <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+	    <li><a href="/medications">Prices</a></li>
+	    <li><a href="/medications/guide">Prescribing guide</a></li>
+	    <li><a href="/categories">Categories</a></li>
+    </ul>
+</li>
 <li class="inactive"><a href="/history">Comparisons</a></li>
 <li class="inactive"><a href="/spending">Spending</a></li>
-<li class="inactive"><a href="/invoices">History</a></li>
-<li class="inactive"><a href="/import">Import</a></li>
-<li class="inactive"><a href="/export">Export</a></li>
+<li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    		aria-haspopup="true" aria-expanded="false">
+    	Invoices <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+	    <li><a href="/invoices">History</a></li>
+	    <li><a href="/import">Import</a></li>
+	    <li><a href="/export">Export</a></li>
+    </ul>
+</li>
 {%endblock%}
 {% block title %}Guide | ehhapp-formulary2{% endblock %}
 {% block body %}
@@ -18,11 +34,10 @@
 			{% for meds in groups.list|groupby("common_name") %}
 				<h4>{{meds.grouper}}</h4>
 	        	{% for med in meds.list %}
-					${{'%0.2f'| format(med.end_price|float)}} ({{med.dosage}}) <a href="/medications/{{med.id}}/edit" 
-					class="btn btn-xs btn-primary" role="button">Edit</a>
+					<a href="/medications/{{med.id}}?year=0">${{'%0.2f'| format(med.end_price|float)}} ({{med.dosage}})</a>{#<a href="/medications/{{med.id}}/edit" class="btn btn-xs btn-primary" role="button">Edit</a>#}{% if loop.index != meds.list|length %},{% endif %}
 				{% endfor %}
-				<hr>
 			{% endfor %}
+			<hr>
 		{% endfor %}
 	    {% if medications|length == 0 %}
 	    <div class="alert alert-error">No medication records in DB.</div>
