--- a/templates/login.html
+++ b/templates/login.html
@@ -35,7 +35,7 @@
         // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
 		var xhr = new XMLHttpRequest();
-		xhr.open('POST', 'https://formulary.ehhapp.org/gCallback');
+		xhr.open('POST', '/gCallback');
 		xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
 		xhr.onload = function() {
 			console.log("Signed in as: ", xhr.responseText);
