--- a/templates/medications_view_history.html
+++ b/templates/medications_view_history.html
@@ -1,7 +1,7 @@
-{% extends 'layout.html' %}
+d{% extends 'layout.html' %}
 {% block navbar%}
 <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
     		aria-haspopup="true" aria-expanded="false">
     	Medications <span class="caret"></span></a>
     <ul class="dropdown-menu">
@@ -13,7 +13,7 @@
 <li class="inactive"><a href="/history">Comparisons</a></li>
 <li class="inactive"><a href="/spending">Spending</a></li>
 <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
     		aria-haspopup="true" aria-expanded="false">
     	Invoices <span class="caret"></span></a>
     <ul class="dropdown-menu">
