--- a/templates/medications_view_history.html
+++ b/templates/medications_view_history.html
@@ -1,4 +1,4 @@
-d{% extends 'layout.html' %}
+{% extends 'layout.html' %}
 {% block navbar%}
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
