--- a/templates/insulin_piechart.html
+++ b/templates/insulin_piechart.html
@@ -30,28 +30,31 @@
 {% endmacro %}
 {% block body %}
 	    <div class="page-header">
-		    <h1>History comparison tool</h1>
+		    <h1>Spending Pie Chart</h1>
 	    </div>
-	    <form method="GET" action="/history/">
-	    	<div class="form-row">
-		    	<div class="form-group col-md-4">
-			    	<label for="search_term">Drug Categories:</label>
-			    	<input class="form-control" name="search_term" type="text" value="" placeholder="e.g. ibuprofen; naproxen">
-			    </div>
-			    <div class="form-group col-md-3">
-			    	<label for="year">Drug Names</label>
-			    	<select name="year" class="form-control">
-            {% for m in dataframe.name %}
-					  <option value=med>med</option>
-            {% endfor %}
-					</select>
-				</div>
-			</div>
-			<div class="form-group row">
-    			<div class="col-sm-10">
-				<button class="btn btn-primary" type="submit">Search</button>
-			</div></div>
+	    <form method="GET" action="/piechart" class="form-inline">
+	    	<label for="year">year to analyze</label>
+	    	<select name="year" class="form-control" onchange="this.form.submit()">
+	    	 {% for y in range(1,12) %}
+	    	 {% if y==year|int %}
+			  <option value="{{y}}" selected="selected">{{y}}</option>
+			 {% else %}
+			   <option value="{{y}}">{{y}}</option>
+			 {% endif %}
+			 {% endfor %}
+			 {% if year=="0" %}
+			 	<option value="0" selected="selected">All</option>
+			 {% else %}
+			 	<option value="0">All</option>
+			 {% endif %}
+			</select>
 	    </form>
-
+	    <div class="row">
+	    <div class="col-md-2"></div>
+    	<div class="col-md-8">
+    	{{html_figure|safe}}
+    	</div>
+    	<div class="col-md-2"></div>
+	    </div>
 
 {% endblock %}
