--- a/templates/medications_view_history.html
+++ b/templates/medications_view_history.html
@@ -12,7 +12,6 @@
 </li>
 <li class="inactive"><a href="/history">Comparisons</a></li>
 <li class="inactive"><a href="/spending">Spending</a></li>
-<li class="inactive"><a href="/drug_history">Drug History</a></li>
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
     		aria-haspopup="true" aria-expanded="false">
@@ -30,20 +29,24 @@
 {% endmacro %}
 {% block body %}
 	    <div class="page-header">
-		    <h1>History comparison tool</h1>
+		    <h1>{% if medications|length != 0 %}History for year {{year}}{% else %}History comparison tool{%endif%}</h1>
 	    </div>
+	    {% if medications|length == 0 %}
 	    <form method="GET" action="/history/">
 	    	<div class="form-row">
 		    	<div class="form-group col-md-4">
-			    	<label for="search_term">Drug Categories:</label>
+			    	<label for="search_term">Enter search term(s):</label>
 			    	<input class="form-control" name="search_term" type="text" value="" placeholder="e.g. ibuprofen; naproxen">
 			    </div>
 			    <div class="form-group col-md-3">
-			    	<label for="year">Drug Names</label>
+			    	<label for="year">Year to analyze</label>
 			    	<select name="year" class="form-control">
-            {% for m in dataframe.name %}
-					  <option value=med>med</option>
-            {% endfor %}
+					  <option value="2014">2014</option>
+					  <option value="2015">2015</option>
+					  <option value="2016">2016</option>
+					  <option value="2017">2017</option>
+					  <option value="2018">2018</option>
+					  <option value="0" selected="selected">All</option>
 					</select>
 				</div>
 			</div>
@@ -52,6 +55,54 @@
 				<button class="btn btn-primary" type="submit">Search</button>
 			</div></div>
 	    </form>
-
+	    {% else %}
+	    <h3>Price Changes</h3>
+	    {{html_figure1|safe}}
+	    <h3>Money Spent</h3>
+	    <div class="row">
+	    <div class="col-md-2"></div>
+    	<div class="col-md-8">
+    	{{html_figure2|safe}}
+    	</div>
+    	<div class="col-md-2"></div>
+	    </div>
+	    <table class="table table-hover">
+		<thead>
+			<th> Name </th>
+			<th> Category </th>
+			<th> Start Price </th>
+			<th> End Price </th>
+			<th> % chg</th>
+			<th> Total bought </th>
+			<th> Bought </th>
+			<th> Scripts </th>
+		</thead>
+		<tbody>
+		{% for med in medications %}
+		<tr>
+			<td> <a href="/medications/{{med.id}}?year={{year}}">{{ med.name }}</a></td>
+			<td> {{med.category}} </td>
+			<td> ${{ med.transactions[0].price | round(3) }}</td>
+			<td> ${{ med.transactions[-1].price | round(3) }}</td>
+			<td> {{(med.transactions[-1].price/med.transactions[0].price*100-100) | round(2)}}%</td>
+			{% set spendcounter = {med.name:0} %}
+			{% for m in med.transactions %}
+				{{ increment(spendcounter,med.name,inc=m.qty|int*m.price|float) }}
+			{% endfor %}
+			<td> ${{spendcounter[med.name]|round(2)}}</td>
+			{% set counter = {med.name:0} %}
+			{% for m in med.transactions %}
+				{% if m.qty|int > 0 %}
+					{{ increment(counter,med.name,inc=m.qty|int) }}
+				{% endif %}
+			{% endfor %}
+			<td> {{counter[med.name]}}</td>
+			<td> {{med.transactions | length}} </td>
+		</tr>
+		{% endfor %}
+		</tbody>
+	    </table>
+	    {% endif %}
+	    </div>
 
 {% endblock %}
